feat:added ui changes

--- a/kobo/apps/accounts/templates/account/signup.html
+++ b/kobo/apps/accounts/templates/account/signup.html
@@ -85,8 +85,9 @@
       {% endif %}
 
       {% if welcome_message %} {{ welcome_message|safe }} {% else %}
-      <p>KoboToolbox is an integrated set of tools for building forms and collecting interview responses. It is built for easy and reliable use in difficult field settings, such as humanitarian emergencies or
-          post-conflict environments. <a href="http://www.kobotoolbox.org">Read more</a></p>
+      <p>
+        At Data 123, we stand out as a premier provider of data analytics and market research services in Botswana. Our expertise lies in delivering precise and actionable insights that fuel growth and empower well-informed data-driven decisions. <a href="https://www.data123.online">Read more</a>
+      </p>
       {% endif %}
   </div>
   <div style="clear:both;"></div>
