--- a/kpi/templates/base_simple.html
+++ b/kpi/templates/base_simple.html
@@ -14,8 +14,8 @@
     {% block head_meta %}{% endblock %}
 
     <!-- Title and description -->
-    <title>KoboToolbox {% block title %}{% endblock %}</title>
-    <meta name="description" content="KoboToolbox is a free toolkit for collecting and managing data in challenging environments and is the most widely-used tool in humanitarian emergencies">
+    <title>Data123 {% block title %}{% endblock %}</title>
+    <meta name="description" content="At Data 123, we stand out as a premier provider of data analytics and market research services in Botswana">
 
     <!-- Icons -->
     <link rel="icon" href="{% static 'favicon.png' %}" />
