--- a/kobo/apps/accounts/templates/account/base.html
+++ b/kobo/apps/accounts/templates/account/base.html
@@ -21,7 +21,7 @@
   {% if config.logo %}
     <img src="{{ config.logo }}"/>
   {% else %}
-    <img src="{% static 'kobologo.svg' %}"/>
+    <img src="{% static 'logos.png' %}"/>
   {% endif %}
 {% endblock %}
 
@@ -54,17 +54,4 @@
 {% block content %}
 {% endblock %}
 
-{% block background_credit %}
-  {% if not config.login_background %}
-    {# Show the background image credit only if we're using the default image #}
-    <div class="registration__credit">
-        <a href="https://flic.kr/p/9v4mC5" title="Muhkjar refugee camp" target="_blank">
-            Photo
-        </a>
-        by UNAMID /
-        <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" target="_blank">
-            by-nc-nd
-        </a>
-    </div>
-  {% endif %}
-{% endblock %}
+
