header logo change

--- a/jsapp/scss/components/_kobo.navigation.scss
+++ b/jsapp/scss/components/_kobo.navigation.scss
@@ -39,7 +39,7 @@
   .header__logo {
     width: 180px;
     height: 40px;
-    background: url("../img/kobologo.svg") no-repeat 50% 50%;
+    background: url("../img/logos.png") no-repeat 50% 50%;
     background-size: contain;
     display: block;
   }
