changed site title

--- a/kpi/templates/index.html
+++ b/kpi/templates/index.html
@@ -11,7 +11,7 @@
   {% endif %}
 {% endblock %}
 
-{% block title %}{{title}}{% endblock %}
+{% block title %}Data123{% endblock %}
 
 {% block head_scripts %}
   <script src="{% static 'js/redirect_obsolete_browsers.js' %}"></script>
