--- a/kpi/templates/base_simple.html
+++ b/kpi/templates/base_simple.html
@@ -14,7 +14,7 @@
     {% block head_meta %}{% endblock %}
 
     <!-- Title and description -->
-    <title>Data123 {% block title %}{% endblock %}</title>
+    <title>Data 123</title>
     <meta name="description" content="At Data 123, we stand out as a premier provider of data analytics and market research services in Botswana">
 
     <!-- Icons -->
