--- a/kpi/templates/base_simple.html
+++ b/kpi/templates/base_simple.html
@@ -19,9 +19,9 @@
 
     <!-- Icons -->
     <link rel="icon" href="{% static 'favicon.png' %}" />
-    <link rel="apple-touch-icon" href="{% static 'apple-touch-icon.png' %}" />
+    <link rel="apple-touch-icon" href="{% static 'favicon.png' %}" />
     <link rel="manifest" href="{% static 'site.webmanifest' %}" />
-    <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#2095f3" />
+    <link rel="mask-icon" href="{% static 'favicon.png' %}" />
 
     <!-- Scripts -->
     <!-- Make Django's internationalization functionality available in client code. -->
